--- a/Job/笔试知识点汇总.md
+++ b/Job/笔试知识点汇总.md
@@ -1,3 +1,3 @@
 ## 笔试知识点汇总
 
-[DDR3 内存带宽计算](http://blog.chinaunix.net/uid-14214482-id-3220464.html)
+1. [DDR3 内存带宽计算](http://blog.chinaunix.net/uid-14214482-id-3220464.html)
