--- a/Job/笔试知识点汇总.md
+++ b/Job/笔试知识点汇总.md
@@ -3,3 +3,4 @@
 1. [DDR3 内存带宽计算](http://blog.chinaunix.net/uid-14214482-id-3220464.html)
     ![DDR3.png](../Picture/p_job/DDR3.png)
 2. [校招基础——存储器](https://www.icode9.com/content-4-735054.html)
+3. [数电基础：时序逻辑电路的时序分析](https://blog.csdn.net/qq_26652069/article/details/90756790)
