--- a/Job/笔试知识点汇总.md
+++ b/Job/笔试知识点汇总.md
@@ -8,6 +8,7 @@
 5. [【笔试解析】2020华为海思校招芯片岗笔试](https://sourl.cn/RZtyvc)
 6. [序列检测器](https://www.cnblogs.com/qiweiwang/archive/2011/04/18/2019952.html)
 7. [Verilog中同步复位和异步复位比较](https://blog.csdn.net/kobesdu/article/details/16356997)
+8. [建立时间和保持时间(1)](https://sourl.cn/RZtyvc)
 
 
 
