--- a/Job/笔试知识点汇总.md
+++ b/Job/笔试知识点汇总.md
@@ -10,6 +10,7 @@
 7. [Verilog中同步复位和异步复位比较](https://blog.csdn.net/kobesdu/article/details/16356997)
 8. [建立时间和保持时间(1)](https://sourl.cn/RZtyvc)
 9. [数字 IC 笔试面试必考点（12）静态时序分析 STA](https://blog.csdn.net/MicroTalent12/article/details/106569118/)
+10. [IC/FPGA笔试/面试题分析（七）建立时间和保持时间类型考题汇总分析](https://blog.csdn.net/moon9999/article/details/78001751)
 
 
 
