--- a/Job/求职经验分享.md
+++ b/Job/求职经验分享.md
@@ -2,3 +2,4 @@
 
 1. [转正实习、春招、秋招、校招、社招的4个区别和陷阱](http://www.360doc.com/content/18/0828/11/14512225_781817656.shtml)
 2. [实习转正和校招如何权衡？](https://zhuanlan.zhihu.com/p/48191503)
+3. [2019届华为秋招数字芯片面试经验](https://blog.csdn.net/weixin_43343190/article/details/84725721)
