--- a/Job/笔试知识点汇总.md
+++ b/Job/笔试知识点汇总.md
@@ -11,7 +11,7 @@
 8. [建立时间和保持时间(1)](https://sourl.cn/RZtyvc)
 9. [数字 IC 笔试面试必考点（12）静态时序分析 STA](https://blog.csdn.net/MicroTalent12/article/details/106569118/)
 10. [IC/FPGA笔试/面试题分析（七）建立时间和保持时间类型考题汇总分析](https://reborn.blog.csdn.net/article/details/100049997?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7Edefault-8.control&dist_request_id=1331978.1086.16185772577372479&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromBaidu%7Edefault-8.control)
-
+11. [亚稳态的危害及预防](https://blog.csdn.net/u013895726/article/details/61918516)
 
 
 
